feat(modules): integrate P6-P8 feature modules (Room v3 + 7 modules)
Implements ANDROID_P6P7P8_PATCH_PROMPT scope minus Module 4 (Network
Observatory, dropped for Play-policy/VpnService risk). Adds 7 reachable
modules off the MainActivity overflow menu: Session History, Route Lab,
GeoFence Lab, Permission Drift, EXIF Cleaner, Privacy Wipe, Evidence Export.

- Room 2 -> 3: 11 new entities + 8 DAOs, additive MIGRATION_2_3, schema 3.json committed
- 3 activities, 7 bottom sheets, 4 chained one-shot workers, 11 engines, 10 adapters
- Unified MockEvent bus on MockedBinder; recorder + geofence monitor subscribe
- FeatureFlag (7 flags) wired into SettingsBottomSheet toggle panel
- FileProvider + 3 new permissions (QUERY_ALL_PACKAGES, READ_MEDIA_IMAGES, READ_EXTERNAL_STORAGE maxSdk32)
- gitignore: drop scratch prompt docs from tree

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>